--- a/Lab5_Anagrammi/src/it/polito/tdp/anagrammi/controller/Anagrammi.fxml
+++ b/Lab5_Anagrammi/src/it/polito/tdp/anagrammi/controller/Anagrammi.fxml
@@ -1,6 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.anagrammi.controller.AnagrammiController"/>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.anagrammi.controller.AnagrammiController">
+   <center>
+      <VBox spacing="10.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox spacing="50.0">
+               <children>
+                  <TextField fx:id="txtParola" prefWidth="200.0" promptText="Inserire parola da anagrammare" />
+                  <Button fx:id="btnCalcola" mnemonicParsing="false" onAction="#doCalcola" text="Calcola Anagrammi" />
+               </children>
+            </HBox>
+            <Label text="Anagrammi Corretti" />
+            <TextArea fx:id="txtCorretti" editable="false" />
+            <Label text="Anagrammi Errati" />
+            <TextArea fx:id="txtErrati" editable="false" />
+            <Button fx:id="btnReset" mnemonicParsing="false" onAction="#doReset" text="Reset" />
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
+      </VBox>
+   </center>
+   <top>
+      <Label text="Lab5_Anagrammi" BorderPane.alignment="CENTER" />
+   </top>
+</BorderPane>
